add login log out actions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+   <%= link_to "GroupOurTransactions", root_path %>
+    <% if logged_in? %>
+                <%= link_to current_user.name, user_path(User.find(session[:user_id])) %> |
+                <%= link_to "Log out", logout_path, method: :delete %>
+         <% else %>
+             <%= link_to "Log in", login_path %> |
+              <%= link_to "Sign up", signup_path %>
+    <% end %> 
     <%= yield %>
   </body>
 </html>
