--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+
+  <%= link_to "Sign Up", new_user_path %>  |
+  <%= link_to "Login", login_path %>  |
+  <%= link_to "Log out", logout_path, method: :delete %>
     <%= yield %>
   </body>
 </html>
