--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,5 +3,10 @@
   <strong>Username:</strong>
   <%= @user.username %>
 </p>
+<p>
+  <button>All My Transactions</button><br>
+  <button>All My External Transactions</button><br>
+  <button>All My Groups</button><br>
+</p>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
