--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -18,14 +18,14 @@
 
   <div class="field">
     <%= form.label :icon %>
-    <%= form.text_field :icon %>
+    <%= form.file_field :icon %>
   </div>
 
   <div class="field">
     <%= form.label :created_at %>
     <%= form.datetime_select :created_at %>
   </div>
-  
+
 
   <div class="actions">
     <%= form.submit %>
