--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,21 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-
-  <%= link_to "Sign Up", new_user_path %>  |
-  <%= link_to "Login", login_path %>  |
-  <%= link_to "Log out", logout_path, method: :delete %>
+  <% if logged_in? %>
+          <%= link_to "Profile", user_path(current_user) %> |
+          <%= link_to "Log out", logout_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign Up", new_user_path %>  |
+          <%= link_to "Login", login_path %> 
+   <% end %>
+   |
+  
     <%= yield %>
   </body>
 </html>
