--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -22,10 +22,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+    <%= form.select :group_id, Group.all.map { |grp| [grp.name, grp.id] } %>
   </div>
-  
+
 
   <div class="actions">
     <%= form.submit %>
