--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -10,6 +10,6 @@
   <%= @transaction.amount %>
 </p>
 
-
+<p><%= @transaction.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
 <%= link_to 'Edit', edit_transaction_path(@transaction) %> |
 <%= link_to 'Back', transactions_path %>
