--- a/app/views/external_transactions/index.html.erb
+++ b/app/views/external_transactions/index.html.erb
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New External Transaction', new_external_transaction_path %>
+<%= link_to 'Add new', new_external_transaction_path, class: "btn btn-success" %>
