--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -11,4 +11,4 @@
     <% end %>
     </p> 
 <br>
-<%= link_to 'New Group', new_group_path %>
+<%= link_to 'Create New Group', new_group_path, class: "btn btn-success" %>
