--- a/app/views/external_transactions/index.html.erb
+++ b/app/views/external_transactions/index.html.erb
@@ -3,23 +3,26 @@
 <h1>External Transactions</h1>
 
  <% @external_transactions.first(1).each do |external_transaction| %>
-    <p>$<%= external_transaction.total_ex %></p>
+    <p>Total amount: $<%= external_transaction.total_ex %></p>
+ <% end %>
+
+ <% @external_transactions.each do |external_transaction| %>
+    <p>----</p>
+    <%= link_to external_transaction do %>
+        <p><%= external_transaction.name.capitalize %></p><br>
     <% end %>
+      <p><%= external_transaction.created_at.strftime("%B %d %Y, %l:%M%P") %></p>
+      <p>$<%= external_transaction.amount %></p><br>
 
+      <% if current_user.id == external_transaction.user.id %>
+          <%= link_to 'Show', external_transaction %>
+          <%= link_to 'Edit', edit_external_transaction_path(external_transaction) %>
+          <%= link_to 'Destroy', external_transaction, method: :delete, data: { confirm: 'Are you sure?' } %>
+       <% end %>
+ <% end %>
 
-    <% @external_transactions.each do |external_transaction| %>
-         <%= link_to external_transaction do %>
-     <% end %>
-
-
-         <p>$<%= external_transaction.amount %></p><br>
-        <%= link_to 'Show', external_transaction %>
-        <%= link_to 'Edit', edit_external_transaction_path(external_transaction) %>
-       <%= link_to 'Destroy', external_transaction, method: :delete, data: { confirm: 'Are you sure?' } %>
-     
-    <% end %>
   
 
 <br>
 
-<%= link_to 'Add new', new_external_transaction_path, class: "btn btn-success" %>
+<%= link_to 'Add new', new_external_transaction_path, class: "btn btn-lg btn-success" %>
