--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -28,9 +28,10 @@
   
       <p>$<%= transaction.amount %></p><br>
       <%= link_to "Show", transaction %> |
-      <%= link_to "Edit", edit_transaction_path(transaction) %> |
-      <%= link_to "Destroy", transaction, method: :delete, data: { confirm: "Are you sure?" } %>
-  
+      <% if current_user.id == expense.user.id %>
+        <%= link_to "Edit", edit_transaction_path(transaction) %> |
+        <%= link_to "Destroy", transaction, method: :delete, data: { confirm: "Are you sure?" } %>
+      <% end %>
  
   <% end %>
   <% else %>
