--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -28,7 +28,7 @@
   
       <p>$<%= transaction.amount %></p><br>
       <%= link_to "Show", transaction %> |
-      <% if current_user.id == expense.user.id %>
+      <% if current_user.id == transaction.user.id %>
         <%= link_to "Edit", edit_transaction_path(transaction) %> |
         <%= link_to "Destroy", transaction, method: :delete, data: { confirm: "Are you sure?" } %>
       <% end %>
