--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -14,19 +14,19 @@
    <div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
+   </div>
+   <div class="field">
     <%= form.label :amount %>
     <%= form.number_field :amount %>
+   </div>
+   <div class="form-group">
+    <%= form.label 'Group' %>
+    <select id="transaction_group_id" name="transaction[group_id]" class="custom-select" id="inputGroupSelect01">
+      <option value='<%= nil%>'></option>
+      <% Group.all.each do |group| %>
+        <option value="<%= group.id %>"><%= group.name %></option>
+      <% end %>
+    </select>
   </div>
-
-  <div class="field">
-    <%= form.select :group_id, Group.all.map { |grp| [grp.name, grp.id] } %>
-  </div>
-
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+  <%= form.submit class: "submit" %>
 <% end %>
