--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
  <h2><%= @user.name %></h2> 
 </p>
 <p>
+  <a href="#">Account Settings<a>
   <%= link_to 'All Transactions', transactions_path, class: "btn btn-success" %>
   <%= link_to 'AllExternal Transactions', external_path, class: "btn btn-success" %>
   <%= link_to 'All Groups', groups_path, class: "btn btn-success" %>
