fix transaction`s date view

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -22,7 +22,7 @@
         <%= link_to transaction do %>
         <p><%= transaction.name.capitalize %></p>
          <% end %>
-      <p><%= transaction.created_at.strftime("%B %d %Y") %> by <%= transaction.user.name %></p>
+      <p><%= transaction.created_at %> by <%= transaction.user.name %></p>
     
     
   
