--- a/app/views/pages/external.html.erb
+++ b/app/views/pages/external.html.erb
@@ -1,10 +1,10 @@
 
-     <h2> Extra transactions</h2> 
+     <h2> External transactions</h2> 
      <p>
         Total amount: $ <%= @external_total %>
      </p>
      <p>
-        <% @external_user_transactions.each do |transaction| %>
+        <% @external_transactions.each do |transaction| %>
     <hr>
               <p> <%=link_to transaction.name %> </p>
               <p>$<%= transaction.amount %></p>
