add gravatar for user profile

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :username %>
   </div>
 
+  <div class="field">
+    <%= form.label :email %>
+    <%= form.email_field :email %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
