add icon to group view

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,7 +2,7 @@
 @import "rails_bootstrap_forms";
 @import "bootstrap-sprockets";
 @import "font-awesome-sprockets";
-@import "font-awesome";
+@import 'font_awesome5.css';
 
 // Bootstrap styles
 
