--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -17,9 +17,42 @@
   </div>
 
   <div class="field">
-    <%= form.label :icon %>
-    <%= form.file_field :icon %>
-  </div>
+      <%= form.check_box :icon %>    
+        <i class="fa fa-phone icon-size-group ml-5"></i>
+       
+        <%= form.check_box :icon %>    
+        <i class="fa fa-shopping-bag icon-size-group ml-3"></i>
+       
+        <%= form.check_box :icon %>    
+        <i class="fa fa-taxi icon-size-group ml-3"></i>
+      
+        <%= form.check_box :icon %>   
+        <i class="fa fa-tree icon-size-group ml-3"></i>
+  
+         <%= form.check_box :icon %>      
+        <i class="fa fa-percent icon-size-group ml-3"></i>
+     
+         <%= form.check_box :icon %>   
+        <i class="fa fa-graduation-cap icon-size-group ml-3"></i>
+      
+         <%= form.check_box :icon %>   
+        <i class="fa fa-birthday-cake icon-size-group ml-3"></i>
+     
+        <%= form.check_box :icon %>  
+        <i class="fa fa-bed icon-size-group ml-3"></i>
+       
+        <%= form.check_box :icon %>  
+        <i class="fa fa-cutlery icon-size-group ml-3"></i>
+
+        <%= form.check_box :icon %>  
+        <i class="fa fa-amazon icon-size-group ml-3"></i>
+       
+        <%= form.check_box :icon %>     
+        <i class="fa fa-shopping-cart icon-size-group ml-3"></i>
+      
+         <%= form.check_box :icon %>   
+        <i class="fa fa-bus icon-size-group ml-3"></i>
+ </div>
 
   <div class="field">
     <%= form.label :created_at %>
