--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(user, :html => { class: "contact"}) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+      <h2><%= pluralize(user.errors.count, "error") %> prohibited this contact from being saved:</h2>
 
       <ul>
       <% user.errors.full_messages.each do |message| %>
