check icon view in group

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -17,40 +17,42 @@
   </div>
 
   <div class="field">
-      <%= form.check_box :icon %>    
+      <%= form.label :icon %>    
+
+        <%= radio_button_tag(:icon, "fa fa-phone") %> 
         <i class="fa fa-phone icon-size-group ml-5"></i>
        
-        <%= form.check_box :icon %>    
+        <%= radio_button_tag(:icon, "fa fa-shopping") %> 
         <i class="fa fa-shopping-bag icon-size-group ml-3"></i>
        
-        <%= form.check_box :icon %>    
+        <%= radio_button_tag(:icon, "fa fa-taxi") %> 
         <i class="fa fa-taxi icon-size-group ml-3"></i>
       
-        <%= form.check_box :icon %>   
+        <%= radio_button_tag(:icon, "fa fa-tree") %> 
         <i class="fa fa-tree icon-size-group ml-3"></i>
   
-         <%= form.check_box :icon %>      
+         <%= radio_button_tag(:icon, "fa fa-percent") %>  
         <i class="fa fa-percent icon-size-group ml-3"></i>
-     
-         <%= form.check_box :icon %>   
+
+         <%= radio_button_tag(:icon, "fa fa-graduation-cap") %>  
         <i class="fa fa-graduation-cap icon-size-group ml-3"></i>
       
-         <%= form.check_box :icon %>   
+         <%= radio_button_tag(:icon, "fa fa-birthday-cake") %> 
         <i class="fa fa-birthday-cake icon-size-group ml-3"></i>
      
-        <%= form.check_box :icon %>  
+        <%= radio_button_tag(:icon, "fa fa-bed") %> 
         <i class="fa fa-bed icon-size-group ml-3"></i>
        
-        <%= form.check_box :icon %>  
+        <%= radio_button_tag(:icon, "fa fa-cutlery") %> 
         <i class="fa fa-cutlery icon-size-group ml-3"></i>
 
-        <%= form.check_box :icon %>  
+        <%= radio_button_tag(:icon, "fa fa-amazon") %> 
         <i class="fa fa-amazon icon-size-group ml-3"></i>
        
-        <%= form.check_box :icon %>     
+        <%= radio_button_tag(:icon, "fa fa-shopping-cart") %> 
         <i class="fa fa-shopping-cart icon-size-group ml-3"></i>
       
-         <%= form.check_box :icon %>   
+         <%= radio_button_tag(:icon, "fa fa-bus") %> 
         <i class="fa fa-bus icon-size-group ml-3"></i>
  </div>
 
