--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,4 +1,36 @@
-<%= form_with(model: group, local: true) do |form| %>
+<%= form_for @group do |f| %>
+  <% if @group.errors.any? %>
+    <ul>
+      <% @group.errors.full_messages.each do |msg| %>
+        <li class="error"><%= msg %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+   </div>
+  <div class="field">
+    <%= f.radio_button :icon, 'fa fa-phone' %><i class="fa fa-phone" aria-hidden="true"></i>
+   
+    <%= f.radio_button :icon, 'fa fa-graduation-cap' %> <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-birthday-cake' %><i class="fa fa-birthday-cake" aria-hidden="true"></i><br />
+    <%= f.radio_button :icon, 'fa fa-bed' %> <i class="fa fa-bed" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-cutlery' %> <i class="fa fa-cutlery" aria-hidden="true"></i>
+   
+    <%= f.radio_button :icon, 'fa fa-shopping-cart' %> <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-tree' %> <i class="fa fa-tree" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-bus' %><i class="fa fa-bus" aria-hidden="true"></i>
+    <%= f.radio_button :icon, 'fa fa-taxi' %> <i class="fa fa-taxi aria-hidden="true"></i>
+    
+  </p>
+  <%= f.submit class: "submit btn btn-success" %>
+
+
+<!--
+
+<% end %><%= form_with(model: group, local: true) do |form| %>
   <% if group.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(group.errors.count, "error") %> prohibited this group from being saved:</h2>
@@ -66,3 +98,4 @@
     <%= form.submit %>
   </div>
 <% end %>
+-->
