--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,8 +5,8 @@
 
   
       <%= link_to group.name.capitalize, group %><br>
-     
-      <%= group.created_at.strftime("%B %d %Y, %l:%M%P") %>
+      <i class= "<%= group.icon %>" ></i>
+      <%= group.created_at %>
         
     <% if current_user.id == group.user.id %> 
        <%= link_to 'Edit', edit_group_path(group) %>
