change homepage routing and move login form from there

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,3 @@
 <h1>Static Page</h1>
+<p>Already have account?<%= link_to "Log in", login_path %></p>
+<p>New account <%= link_to "Sign up", new_user_path %></p>
