--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -11,11 +11,10 @@
  <%= link_to transaction do %>
         <p><%= transaction.name.capitalize %></p>
          <% end %>
-         
-      <p><%= transaction.created_at %> by <strong>
-      <%= transaction.user.name %></strong></p>
-    <p>$<%= transaction.amount %></p><br>
-      <%= link_to "Show", transaction %> |
+        <p>  by <strong><%= transaction.user.name %></strong></p> 
+         <p>$<%= transaction.amount %></p><br>
+      <p><%= transaction.created_at %>
+    <%= link_to "Show this transaction", transaction %> |
       <% if current_user.id == transaction.user.id %>
         <%= link_to "Edit", edit_transaction_path(transaction) %> |
         <%= link_to "Destroy", transaction, method: :delete, data: { confirm: "Are you sure?" } %>
@@ -25,5 +24,5 @@
   <p>There are no transactions for this group.</p>
   <% end %>
 
-<%= link_to 'Edit', edit_group_path(@group) %> |
-<%= link_to 'Back', groups_path %>
+<%= link_to 'Edit group', edit_group_path(@group) %> |
+<%= link_to 'Back to Groups list', groups_path %>
