--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,8 @@
+<div class="container text-center">
 <h1>New Group</h1>
 
 <%= render 'form', group: @group %>
-
+<i class="fa fa-backward">
 <%= link_to 'Back', groups_path %>
+</i>
+</div>
