--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,15 @@
-<h1>Static Page</h1>
-<p>Already have account?<%= link_to "Log in", login_path %></p>
-<p>New account <%= link_to "Sign up", new_user_path %></p>
+<div class="container start-page">
+<div></div>
+ <h1>Project Name Italic</h1>
+<div class="container text-center">
+<p>Already have account?  <i class="fa fa-sign-in">
+<%= link_to "Log in", login_path %>
+</i>
+</p>
+<p>New account
+<i class="fa fa-sign-in">
+ <%= link_to "Sign up", new_user_path %>
+ </i>
+ </p>
+<div>
+</div>
