--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,5 +1,8 @@
+<div class="container text-center">
 <h1>New Transaction</h1>
 
 <%= render 'form', transaction: @transaction %>
-
+<i class="fa fa-backward">
 <%= link_to 'Back', transactions_path %>
+</i>
+</div>
