--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
+<div class="container text-center">
 <h1>New User</h1>
 
 <%= render 'form', user: @user %>
-
+<i class="fa fa-backward">
 <%= link_to 'Back', login_path %>
+</i>
+</div>
