--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="container text-center">
 <h1>Editing Group</h1>
 
 <%= render 'form', group: @group %>
 
 <%= link_to 'Show', @group %> |
+<i class="fa fa-backward">
 <%= link_to 'Back', groups_path %>
+</i>
+</div>
