--- a/app/views/transactions/show.html.erb
+++ b/app/views/transactions/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container text-center">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -6,10 +7,15 @@
 </p>
 
 <p>
-  <strong>Amount:</strong>
-  <%= @transaction.amount %>
+  <strong>Amount : </strong>
+  $<%= @transaction.amount %>
 </p>
 
 <p><%= @transaction.created_at %></p>
-<%= link_to 'Edit', edit_transaction_path(@transaction) %> |
+<i class="fa fa-edit">
+<%= link_to 'Edit', edit_transaction_path(@transaction) %> </i> |
+
+<i class="fa fa-backward">
 <%= link_to 'Back', transactions_path %>
+</i>
+</div>
