--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container text-center">
 <p id="notice"><%= notice %></p>
 
 <h1>Users#index</h1>
@@ -24,3 +25,4 @@
 
 <%= link_to 'New User', new_user_path %>
 
+</div>
